# rustlings-practice

./: .gitignore  Cargo.toml  README.md  RUSTLINGS_EXPANSION_PLAN.md  info.toml  reset.sh
exercises/09_strings/: strings4.rs
exercises/quizzes/: README.md  quiz4.rs  quiz5.rs  quiz6.rs
flash-card/: Cargo.toml  PLAN.md  README.md
flash-card/data/: cards.json
flash-card/src/: lib.rs  main.rs
flash-card/web/: app.js  index.html  styles.css
solutions/quizzes/: quiz4.rs  quiz5.rs  quiz6.rs
