bin = [
  { name = "intro1", path = "exercises/00_intro/intro1.rs" },
  { name = "intro1_sol", path = "solutions/00_intro/intro1.rs" },
  { name = "intro2", path = "exercises/00_intro/intro2.rs" },
  { name = "intro2_sol", path = "solutions/00_intro/intro2.rs" },
  { name = "variables1", path = "exercises/01_variables/variables1.rs" },
  { name = "variables1_sol", path = "solutions/01_variables/variables1.rs" },
  { name = "variables2", path = "exercises/01_variables/variables2.rs" },
  { name = "variables2_sol", path = "solutions/01_variables/variables2.rs" },
  { name = "variables3", path = "exercises/01_variables/variables3.rs" },
  { name = "variables3_sol", path = "solutions/01_variables/variables3.rs" },
  { name = "variables4", path = "exercises/01_variables/variables4.rs" },
  { name = "variables4_sol", path = "solutions/01_variables/variables4.rs" },
  { name = "variables5", path = "exercises/01_variables/variables5.rs" },
  { name = "variables5_sol", path = "solutions/01_variables/variables5.rs" },
  { name = "variables6", path = "exercises/01_variables/variables6.rs" },
  { name = "variables6_sol", path = "solutions/01_variables/variables6.rs" },
  { name = "functions1", path = "exercises/02_functions/functions1.rs" },
  { name = "functions1_sol", path = "solutions/02_functions/functions1.rs" },
  { name = "functions2", path = "exercises/02_functions/functions2.rs" },
  { name = "functions2_sol", path = "solutions/02_functions/functions2.rs" },
  { name = "functions3", path = "exercises/02_functions/functions3.rs" },
  { name = "functions3_sol", path = "solutions/02_functions/functions3.rs" },
  { name = "functions4", path = "exercises/02_functions/functions4.rs" },
  { name = "functions4_sol", path = "solutions/02_functions/functions4.rs" },
  { name = "functions5", path = "exercises/02_functions/functions5.rs" },
  { name = "functions5_sol", path = "solutions/02_functions/functions5.rs" },
  { name = "if1", path = "exercises/03_if/if1.rs" },
  { name = "if1_sol", path = "solutions/03_if/if1.rs" },
  { name = "if2", path = "exercises/03_if/if2.rs" },
  { name = "if2_sol", path = "solutions/03_if/if2.rs" },
  { name = "if3", path = "exercises/03_if/if3.rs" },
  { name = "if3_sol", path = "solutions/03_if/if3.rs" },
  { name = "flow1", path = "exercises/29_flow_control/flow1.rs" },
  { name = "flow1_sol", path = "solutions/29_flow_control/flow1.rs" },
  { name = "flow2", path = "exercises/29_flow_control/flow2.rs" },
  { name = "flow2_sol", path = "solutions/29_flow_control/flow2.rs" },
  { name = "flow3", path = "exercises/29_flow_control/flow3.rs" },
  { name = "flow3_sol", path = "solutions/29_flow_control/flow3.rs" },
  { name = "quiz1", path = "exercises/quizzes/quiz1.rs" },
  { name = "quiz1_sol", path = "solutions/quizzes/quiz1.rs" },
  { name = "primitive_types1", path = "exercises/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types1_sol", path = "solutions/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "exercises/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types2_sol", path = "solutions/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "exercises/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types3_sol", path = "solutions/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "exercises/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types4_sol", path = "solutions/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "exercises/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types5_sol", path = "solutions/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "exercises/04_primitive_types/primitive_types6.rs" },
  { name = "primitive_types6_sol", path = "solutions/04_primitive_types/primitive_types6.rs" },
  { name = "formatting1", path = "exercises/28_formatting/formatting1.rs" },
  { name = "formatting1_sol", path = "solutions/28_formatting/formatting1.rs" },
  { name = "formatting2", path = "exercises/28_formatting/formatting2.rs" },
  { name = "formatting2_sol", path = "solutions/28_formatting/formatting2.rs" },
  { name = "formatting3", path = "exercises/28_formatting/formatting3.rs" },
  { name = "formatting3_sol", path = "solutions/28_formatting/formatting3.rs" },
  { name = "vecs1", path = "exercises/05_vecs/vecs1.rs" },
  { name = "vecs1_sol", path = "solutions/05_vecs/vecs1.rs" },
  { name = "vecs2", path = "exercises/05_vecs/vecs2.rs" },
  { name = "vecs2_sol", path = "solutions/05_vecs/vecs2.rs" },
  { name = "move_semantics1", path = "exercises/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics1_sol", path = "solutions/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "exercises/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics2_sol", path = "solutions/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "exercises/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics3_sol", path = "solutions/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "exercises/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics4_sol", path = "solutions/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "exercises/06_move_semantics/move_semantics5.rs" },
  { name = "move_semantics5_sol", path = "solutions/06_move_semantics/move_semantics5.rs" },
  { name = "slices1", path = "exercises/30_slices/slices1.rs" },
  { name = "slices1_sol", path = "solutions/30_slices/slices1.rs" },
  { name = "slices2", path = "exercises/30_slices/slices2.rs" },
  { name = "slices2_sol", path = "solutions/30_slices/slices2.rs" },
  { name = "structs1", path = "exercises/07_structs/structs1.rs" },
  { name = "structs1_sol", path = "solutions/07_structs/structs1.rs" },
  { name = "structs2", path = "exercises/07_structs/structs2.rs" },
  { name = "structs2_sol", path = "solutions/07_structs/structs2.rs" },
  { name = "structs3", path = "exercises/07_structs/structs3.rs" },
  { name = "structs3_sol", path = "solutions/07_structs/structs3.rs" },
  { name = "enums1", path = "exercises/08_enums/enums1.rs" },
  { name = "enums1_sol", path = "solutions/08_enums/enums1.rs" },
  { name = "enums2", path = "exercises/08_enums/enums2.rs" },
  { name = "enums2_sol", path = "solutions/08_enums/enums2.rs" },
  { name = "enums3", path = "exercises/08_enums/enums3.rs" },
  { name = "enums3_sol", path = "solutions/08_enums/enums3.rs" },
  { name = "strings1", path = "exercises/09_strings/strings1.rs" },
  { name = "strings1_sol", path = "solutions/09_strings/strings1.rs" },
  { name = "strings2", path = "exercises/09_strings/strings2.rs" },
  { name = "strings2_sol", path = "solutions/09_strings/strings2.rs" },
  { name = "strings3", path = "exercises/09_strings/strings3.rs" },
  { name = "strings3_sol", path = "solutions/09_strings/strings3.rs" },
  { name = "strings4", path = "exercises/09_strings/strings4.rs" },
  { name = "strings4_sol", path = "solutions/09_strings/strings4.rs" },
  { name = "modules1", path = "exercises/10_modules/modules1.rs" },
  { name = "modules1_sol", path = "solutions/10_modules/modules1.rs" },
  { name = "modules2", path = "exercises/10_modules/modules2.rs" },
  { name = "modules2_sol", path = "solutions/10_modules/modules2.rs" },
  { name = "modules3", path = "exercises/10_modules/modules3.rs" },
  { name = "modules3_sol", path = "solutions/10_modules/modules3.rs" },
  { name = "hashmaps1", path = "exercises/11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps1_sol", path = "solutions/11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps2", path = "exercises/11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps2_sol", path = "solutions/11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps3", path = "exercises/11_hashmaps/hashmaps3.rs" },
  { name = "hashmaps3_sol", path = "solutions/11_hashmaps/hashmaps3.rs" },
  { name = "quiz2", path = "exercises/quizzes/quiz2.rs" },
  { name = "quiz2_sol", path = "solutions/quizzes/quiz2.rs" },
  { name = "options1", path = "exercises/12_options/options1.rs" },
  { name = "options1_sol", path = "solutions/12_options/options1.rs" },
  { name = "options2", path = "exercises/12_options/options2.rs" },
  { name = "options2_sol", path = "solutions/12_options/options2.rs" },
  { name = "options3", path = "exercises/12_options/options3.rs" },
  { name = "options3_sol", path = "solutions/12_options/options3.rs" },
  { name = "errors1", path = "exercises/13_error_handling/errors1.rs" },
  { name = "errors1_sol", path = "solutions/13_error_handling/errors1.rs" },
  { name = "errors2", path = "exercises/13_error_handling/errors2.rs" },
  { name = "errors2_sol", path = "solutions/13_error_handling/errors2.rs" },
  { name = "errors3", path = "exercises/13_error_handling/errors3.rs" },
  { name = "errors3_sol", path = "solutions/13_error_handling/errors3.rs" },
  { name = "errors4", path = "exercises/13_error_handling/errors4.rs" },
  { name = "errors4_sol", path = "solutions/13_error_handling/errors4.rs" },
  { name = "errors5", path = "exercises/13_error_handling/errors5.rs" },
  { name = "errors5_sol", path = "solutions/13_error_handling/errors5.rs" },
  { name = "errors6", path = "exercises/13_error_handling/errors6.rs" },
  { name = "errors6_sol", path = "solutions/13_error_handling/errors6.rs" },
  { name = "errors7", path = "exercises/13_error_handling/errors7.rs" },
  { name = "errors7_sol", path = "solutions/13_error_handling/errors7.rs" },
  { name = "generics1", path = "exercises/14_generics/generics1.rs" },
  { name = "generics1_sol", path = "solutions/14_generics/generics1.rs" },
  { name = "generics2", path = "exercises/14_generics/generics2.rs" },
  { name = "generics2_sol", path = "solutions/14_generics/generics2.rs" },
  { name = "generics3", path = "exercises/14_generics/generics3.rs" },
  { name = "generics3_sol", path = "solutions/14_generics/generics3.rs" },
  { name = "generics4", path = "exercises/14_generics/generics4.rs" },
  { name = "generics4_sol", path = "solutions/14_generics/generics4.rs" },
  { name = "traits1", path = "exercises/15_traits/traits1.rs" },
  { name = "traits1_sol", path = "solutions/15_traits/traits1.rs" },
  { name = "traits2", path = "exercises/15_traits/traits2.rs" },
  { name = "traits2_sol", path = "solutions/15_traits/traits2.rs" },
  { name = "traits3", path = "exercises/15_traits/traits3.rs" },
  { name = "traits3_sol", path = "solutions/15_traits/traits3.rs" },
  { name = "traits4", path = "exercises/15_traits/traits4.rs" },
  { name = "traits4_sol", path = "solutions/15_traits/traits4.rs" },
  { name = "traits5", path = "exercises/15_traits/traits5.rs" },
  { name = "traits5_sol", path = "solutions/15_traits/traits5.rs" },
  { name = "traits6", path = "exercises/15_traits/traits6.rs" },
  { name = "traits6_sol", path = "solutions/15_traits/traits6.rs" },
  { name = "traits7", path = "exercises/15_traits/traits7.rs" },
  { name = "traits7_sol", path = "solutions/15_traits/traits7.rs" },
  { name = "traits8", path = "exercises/15_traits/traits8.rs" },
  { name = "traits8_sol", path = "solutions/15_traits/traits8.rs" },
  { name = "quiz3", path = "exercises/quizzes/quiz3.rs" },
  { name = "quiz3_sol", path = "solutions/quizzes/quiz3.rs" },
  { name = "lifetimes1", path = "exercises/16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes1_sol", path = "solutions/16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes2", path = "exercises/16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes2_sol", path = "solutions/16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes3", path = "exercises/16_lifetimes/lifetimes3.rs" },
  { name = "lifetimes3_sol", path = "solutions/16_lifetimes/lifetimes3.rs" },
  { name = "lifetimes4", path = "exercises/16_lifetimes/lifetimes4.rs" },
  { name = "lifetimes4_sol", path = "solutions/16_lifetimes/lifetimes4.rs" },
  { name = "lifetimes5", path = "exercises/16_lifetimes/lifetimes5.rs" },
  { name = "lifetimes5_sol", path = "solutions/16_lifetimes/lifetimes5.rs" },
  { name = "tests1", path = "exercises/17_tests/tests1.rs" },
  { name = "tests1_sol", path = "solutions/17_tests/tests1.rs" },
  { name = "tests2", path = "exercises/17_tests/tests2.rs" },
  { name = "tests2_sol", path = "solutions/17_tests/tests2.rs" },
  { name = "tests3", path = "exercises/17_tests/tests3.rs" },
  { name = "tests3_sol", path = "solutions/17_tests/tests3.rs" },
  { name = "tests4", path = "exercises/17_tests/tests4.rs" },
  { name = "tests4_sol", path = "solutions/17_tests/tests4.rs" },
  { name = "iterators1", path = "exercises/18_iterators/iterators1.rs" },
  { name = "iterators1_sol", path = "solutions/18_iterators/iterators1.rs" },
  { name = "iterators2", path = "exercises/18_iterators/iterators2.rs" },
  { name = "iterators2_sol", path = "solutions/18_iterators/iterators2.rs" },
  { name = "iterators3", path = "exercises/18_iterators/iterators3.rs" },
  { name = "iterators3_sol", path = "solutions/18_iterators/iterators3.rs" },
  { name = "iterators4", path = "exercises/18_iterators/iterators4.rs" },
  { name = "iterators4_sol", path = "solutions/18_iterators/iterators4.rs" },
  { name = "iterators5", path = "exercises/18_iterators/iterators5.rs" },
  { name = "iterators5_sol", path = "solutions/18_iterators/iterators5.rs" },
  { name = "iterators6", path = "exercises/18_iterators/iterators6.rs" },
  { name = "iterators6_sol", path = "solutions/18_iterators/iterators6.rs" },
  { name = "iterators7", path = "exercises/18_iterators/iterators7.rs" },
  { name = "iterators7_sol", path = "solutions/18_iterators/iterators7.rs" },
  { name = "iterators8", path = "exercises/18_iterators/iterators8.rs" },
  { name = "iterators8_sol", path = "solutions/18_iterators/iterators8.rs" },
  { name = "iterators9", path = "exercises/18_iterators/iterators9.rs" },
  { name = "iterators9_sol", path = "solutions/18_iterators/iterators9.rs" },
  { name = "quiz4", path = "exercises/quizzes/quiz4.rs" },
  { name = "quiz4_sol", path = "solutions/quizzes/quiz4.rs" },
  { name = "box1", path = "exercises/19_smart_pointers/box1.rs" },
  { name = "box1_sol", path = "solutions/19_smart_pointers/box1.rs" },
  { name = "rc1", path = "exercises/19_smart_pointers/rc1.rs" },
  { name = "rc1_sol", path = "solutions/19_smart_pointers/rc1.rs" },
  { name = "arc1", path = "exercises/19_smart_pointers/arc1.rs" },
  { name = "arc1_sol", path = "solutions/19_smart_pointers/arc1.rs" },
  { name = "cow1", path = "exercises/19_smart_pointers/cow1.rs" },
  { name = "cow1_sol", path = "solutions/19_smart_pointers/cow1.rs" },
  { name = "cons_list1", path = "exercises/19_smart_pointers/cons_list1.rs" },
  { name = "cons_list1_sol", path = "solutions/19_smart_pointers/cons_list1.rs" },
  { name = "deref1", path = "exercises/19_smart_pointers/deref1.rs" },
  { name = "deref1_sol", path = "solutions/19_smart_pointers/deref1.rs" },
  { name = "drop1", path = "exercises/19_smart_pointers/drop1.rs" },
  { name = "drop1_sol", path = "solutions/19_smart_pointers/drop1.rs" },
  { name = "refcell1", path = "exercises/19_smart_pointers/refcell1.rs" },
  { name = "refcell1_sol", path = "solutions/19_smart_pointers/refcell1.rs" },
  { name = "weak1", path = "exercises/19_smart_pointers/weak1.rs" },
  { name = "weak1_sol", path = "solutions/19_smart_pointers/weak1.rs" },
  { name = "threads1", path = "exercises/20_threads/threads1.rs" },
  { name = "threads1_sol", path = "solutions/20_threads/threads1.rs" },
  { name = "threads2", path = "exercises/20_threads/threads2.rs" },
  { name = "threads2_sol", path = "solutions/20_threads/threads2.rs" },
  { name = "threads3", path = "exercises/20_threads/threads3.rs" },
  { name = "threads3_sol", path = "solutions/20_threads/threads3.rs" },
  { name = "move_threads1", path = "exercises/20_threads/move_threads1.rs" },
  { name = "move_threads1_sol", path = "solutions/20_threads/move_threads1.rs" },
  { name = "channels1", path = "exercises/20_threads/channels1.rs" },
  { name = "channels1_sol", path = "solutions/20_threads/channels1.rs" },
  { name = "channels2", path = "exercises/20_threads/channels2.rs" },
  { name = "channels2_sol", path = "solutions/20_threads/channels2.rs" },
  { name = "macros1", path = "exercises/21_macros/macros1.rs" },
  { name = "macros1_sol", path = "solutions/21_macros/macros1.rs" },
  { name = "macros2", path = "exercises/21_macros/macros2.rs" },
  { name = "macros2_sol", path = "solutions/21_macros/macros2.rs" },
  { name = "macros3", path = "exercises/21_macros/macros3.rs" },
  { name = "macros3_sol", path = "solutions/21_macros/macros3.rs" },
  { name = "macros4", path = "exercises/21_macros/macros4.rs" },
  { name = "macros4_sol", path = "solutions/21_macros/macros4.rs" },
  { name = "clippy1", path = "exercises/22_clippy/clippy1.rs" },
  { name = "clippy1_sol", path = "solutions/22_clippy/clippy1.rs" },
  { name = "clippy2", path = "exercises/22_clippy/clippy2.rs" },
  { name = "clippy2_sol", path = "solutions/22_clippy/clippy2.rs" },
  { name = "clippy3", path = "exercises/22_clippy/clippy3.rs" },
  { name = "clippy3_sol", path = "solutions/22_clippy/clippy3.rs" },
  { name = "using_as", path = "exercises/23_conversions/using_as.rs" },
  { name = "using_as_sol", path = "solutions/23_conversions/using_as.rs" },
  { name = "from_into", path = "exercises/23_conversions/from_into.rs" },
  { name = "from_into_sol", path = "solutions/23_conversions/from_into.rs" },
  { name = "from_str", path = "exercises/23_conversions/from_str.rs" },
  { name = "from_str_sol", path = "solutions/23_conversions/from_str.rs" },
  { name = "try_from_into", path = "exercises/23_conversions/try_from_into.rs" },
  { name = "try_from_into_sol", path = "solutions/23_conversions/try_from_into.rs" },
  { name = "as_ref_mut", path = "exercises/23_conversions/as_ref_mut.rs" },
  { name = "as_ref_mut_sol", path = "solutions/23_conversions/as_ref_mut.rs" },
  { name = "quiz5", path = "exercises/quizzes/quiz5.rs" },
  { name = "quiz5_sol", path = "solutions/quizzes/quiz5.rs" },
  { name = "closures1", path = "exercises/24_closures/closures1.rs" },
  { name = "closures1_sol", path = "solutions/24_closures/closures1.rs" },
  { name = "closures2", path = "exercises/24_closures/closures2.rs" },
  { name = "closures2_sol", path = "solutions/24_closures/closures2.rs" },
  { name = "closures3", path = "exercises/24_closures/closures3.rs" },
  { name = "closures3_sol", path = "solutions/24_closures/closures3.rs" },
  { name = "closures4", path = "exercises/24_closures/closures4.rs" },
  { name = "closures4_sol", path = "solutions/24_closures/closures4.rs" },
  { name = "closures5", path = "exercises/24_closures/closures5.rs" },
  { name = "closures5_sol", path = "solutions/24_closures/closures5.rs" },
  { name = "patterns1", path = "exercises/25_patterns/patterns1.rs" },
  { name = "patterns1_sol", path = "solutions/25_patterns/patterns1.rs" },
  { name = "patterns2", path = "exercises/25_patterns/patterns2.rs" },
  { name = "patterns2_sol", path = "solutions/25_patterns/patterns2.rs" },
  { name = "patterns3", path = "exercises/25_patterns/patterns3.rs" },
  { name = "patterns3_sol", path = "solutions/25_patterns/patterns3.rs" },
  { name = "patterns4", path = "exercises/25_patterns/patterns4.rs" },
  { name = "patterns4_sol", path = "solutions/25_patterns/patterns4.rs" },
  { name = "word_count1", path = "exercises/26_capstone/word_count1.rs" },
  { name = "word_count1_sol", path = "solutions/26_capstone/word_count1.rs" },
  { name = "parallel_sum1", path = "exercises/26_capstone/parallel_sum1.rs" },
  { name = "parallel_sum1_sol", path = "solutions/26_capstone/parallel_sum1.rs" },
  { name = "derive1", path = "exercises/31_derive/derive1.rs" },
  { name = "derive1_sol", path = "solutions/31_derive/derive1.rs" },
  { name = "derive2", path = "exercises/31_derive/derive2.rs" },
  { name = "derive2_sol", path = "solutions/31_derive/derive2.rs" },
  { name = "quiz6", path = "exercises/quizzes/quiz6.rs" },
  { name = "quiz6_sol", path = "solutions/quizzes/quiz6.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
